# test

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  bot.py  formatters.py  llm_client.py  pyproject.toml  requirements.txt
prompts/: recipe_system.md  recipe_user_template.md
prompts/codex/: MASTER_PLAN.md
tests/: conftest.py  test_formatters.py  test_llm_client.py
