[project]
name = "tg-recipe-bot"
version = "0.1.0"
description = "Telegram bot that generates recipes using an LLM."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "python-telegram-bot>=21.0.0",

    "deepseek>=1.0.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
validation = ["pydantic>=2.0"]
dev = ["black>=23.0", "ruff>=0.0.289"]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 88

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F"]
